dropdowns: add single-button dropdown directive

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <blockquote>
         <h3>Dropdowns</h3>
       </blockquote>
-      <dropdown as-id="'myDropdown'">
+      <btn-dropdown as-id="'myDropdown'" theme="'warning'">
         <dropdown-item as-href="'http://google.com'">Google</dropdown-item>
-      </dropdown>
+      </btn-dropdown>
 
     </div>
 
