btn-dropdown: add theme & size attributes + switch to '@' transclusion

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style media="screen">
       .glyphicon {
         font-size: 2.5em;
+        color: #1abc9c;
       }
     </style>
   </head>
@@ -20,10 +21,10 @@
 
       <div class="row">
         <div class="col-xs-1 text-center">
-          <glyph icon="'heart'"></glyph>
+          <glyph icon="heart"></glyph>
         </div>
         <div class="col-xs-6">
-          <pre>&lt;glyph icon="'heart'"&gt;</glyph></pre>
+          <pre>&lt;glyph icon="heart"&gt;</glyph></pre>
         </div>
         <div class="col-xs-5"></div>
       </div>
@@ -32,8 +33,9 @@
       <blockquote>
         <h3>Dropdowns</h3>
       </blockquote>
-      <btn-dropdown as-id="'myDropdown'" theme="'warning'">
-        <dropdown-item as-href="'http://google.com'">Google</dropdown-item>
+
+      <btn-dropdown as-id="myDropdown" theme="danger">
+        <dropdown-item as-href="http://google.com">Google</dropdown-item>
       </btn-dropdown>
 
     </div>
