btnDropdown: add 'title' attribute to define the button's text

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
         <h3>Dropdowns</h3>
     </blockquote>
 
-    <btn-dropdown as-id="myDropdown" theme="danger">
+    <btn-dropdown as-id="myDropdown" theme="danger" title="Sign-In">
         <dropdown-item as-href="https://google.com">Google</dropdown-item>
         <dropdown-divider></dropdown-divider>
         <dropdown-item as-href="https://twitter.com">Twitter</dropdown-item>
+        <dropdown-divider></dropdown-divider>
+        <dropdown-item as-href="" class="disabled">Facebook</dropdown-item>
+        <dropdown-item as-href="" class="disabled">Instagram</dropdown-item>
+        <dropdown-item as-href="" class="disabled">Linked-in</dropdown-item>
     </btn-dropdown>
 
 </div>
