glyphicons: add <btn-glyph> directive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Angustrap Demo</title>
     <style media="screen">
         .glyphicon {
+
+        }
+        .glyphicon-heart {
             font-size: 2.5em;
             color: #1abc9c;
         }
@@ -20,13 +23,18 @@
     </blockquote>
 
     <div class="row">
-        <div class="col-xs-1 text-center">
+        <div class="col-xs-2 text-center">
             <glyph icon="heart"></glyph>
+            <br/><br/>
+            <btn-glyph icon="heart-empty" theme="info" size="lg">Angustrap</btn-glyph>
         </div>
-        <div class="col-xs-6">
-            <pre>&lt;glyph icon="heart"&gt;</glyph></pre>
+        <div class="col-xs-8">
+            <pre>
+&lt;glyph icon="heart"&gt;&lt;/glyph&gt;
+&lt;btn-glyph icon="heart-empty" theme="info" size="lg"&gt;Angustrap&lt;/btn-glyph&gt;
+            </pre>
         </div>
-        <div class="col-xs-5"></div>
+        <div class="col-xs-2"></div>
     </div>
 
     <br/><br/>
