dropdowns: add 'dropup' boolean attribute to flip the dropdown and make it drop up

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </blockquote>
     <div class="row">
         <div class="col-sm-2">
-            <btn-dropdown theme="danger" title="Sign-In">
+            <btn-dropdown theme="danger" title="Sign-In" dropup="true">
                 <dropdown-item as-href="https://google.com">Google</dropdown-item>
                 <dropdown-divider></dropdown-divider>
                 <dropdown-item as-href="https://twitter.com">Twitter</dropdown-item>
