directives: add <input-group> directive with support for span & btn types

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     </navbar-list>
 </navbar>
 
-<div class="container">
-    <br><br>
+<div class="container"><br/>
 
     <!--Glyphicons-->
     <blockquote>
@@ -50,7 +49,7 @@
         <div class="hidden-xs col-sm-2"></div>
     </div>
 
-    <br/><br/>
+    <br/><br/><br/><br/>
 
     <!-- Dropdowns -->
     <blockquote>
@@ -90,9 +89,29 @@
                 <list-item as-href="" class="disabled">Linked-in</list-item>
             </split-dropdown>
         </div>
+        <div class="col-sm-2">
+
+        </div>
         <div class="col-sm-2"></div>
         <div class="col-sm-2"></div>
-        <div class="col-sm-2"></div>
+    </div>
+
+    <br/><br/><br/><br/>
+
+    <!-- Input Groups -->
+    <blockquote>
+        <h3>Input Groups</h3>
+    </blockquote>
+    <div class="row">
+        <div class="col-sm-4">
+            <h4>Left &lt;span&gt; add-on</h4>
+            <input-group title="@" type="span" side="left" input-type="text"></input-group>
+        </div>
+        <div class="col-sm-4">
+            <h4>Right &lt;button&gt; add-on</h4>
+            <input-group title="@" type="btn" side="right" input-type="text" theme="primary"></input-group>
+        </div>
+        <div class="col-sm-4"></div>
     </div>
 </div>
 
