inputGroup: add support for an optional 'icon' attribute

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </blockquote>
     <div class="row">
         <div class="col-sm-4">
-            <dropdown type="split" title="Dropdown" theme="warning" id="test" size="sm" icon="qrcode" dropup="true" as-click="alert('YEP')">
+            <dropdown type="split" title="Dropdown" theme="warning" size="sm" icon="qrcode" dropup="true" as-click="alert('YEP')">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
@@ -68,7 +68,7 @@
             </dropdown>
         </div>
         <div class="col-sm-4">
-            <btn-dropdown theme="danger" title="Sign-In" dropup="true">
+            <dropdown type="btn" title="Dropdown" theme="warning" size="sm" icon="tint" dropup="true" as-click="alert('YEP')">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
@@ -76,10 +76,10 @@
                 <list-item as-href="" class="disabled">Facebook</list-item>
                 <list-item as-href="" class="disabled">Instagram</list-item>
                 <list-item as-href="" class="disabled">Linked-in</list-item>
-            </btn-dropdown>
+            </dropdown>
         </div>
         <div class="col-sm-4">
-            <split-dropdown theme="success" size="lg" icon="qrcode" title="Sign-In">
+            <split-dropdown theme="success" size="lg" icon="eye-open" title="Sign-In">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-sm-4">
             <h4>Right &lt;button&gt; add-ons</h4>
-            <input-group title="LARGE" type="btn" size="lg" side="right" theme="warning" input-type="text"></input-group>
+            <input-group title="LARGE" icon="tint" type="btn" size="lg" side="right" theme="warning" input-type="text"></input-group>
             <br/>
             <input-group title="MEDIUM" type="btn" side="right" theme="primary" input-type="text"></input-group>
             <br/>
