--- a/index.html
+++ b/index.html
@@ -122,5 +122,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="angustrap.js"></script>
+<script src="angustrap.js"></script>
 </body>
 </html>
