Grunt: concatenate all directives/services so we can work on individual files

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
                 <list-item as-href="" class="disabled">Facebook</list-item>
             </dropdown>
             <br/><br/>
-            <dropdown type="split" title="Big Split Dropdown" size="lg" theme="default" icon="thumbs-up">
+            <dropdown type="split" title="Big Split" size="lg" theme="default" icon="thumbs-up">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
@@ -117,23 +117,25 @@
 
         <div class="col-sm-6 col-md-3">
             <!-- Dropups -->
-            <dropdown type="btn" title="Small Dropup" theme="default" size="sm" icon="filter" dropup="true">
+            <dropdown type="split" title="Small Dropup" theme="default" size="sm" icon="filter" dropup="true">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="" class="disabled">Facebook</list-item>
             </dropdown>
-            <br/>
-            <dropdown type="btn" title="Dropup" theme="info" icon="hdd" dropup="true">
+            <br/><br/>
+
+            <dropdown type="split" title="Dropup" theme="info" icon="hdd" dropup="true">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="" class="disabled">Facebook</list-item>
             </dropdown>
-            <br/>
-            <dropdown type="btn" title="Big Dropdup" size="lg" theme="primary" icon="gift" dropup="true">
+            <br/><br/>
+
+            <dropdown type="split" title="Big Dropdup" size="lg" theme="primary" icon="gift" dropup="true">
                 <list-item as-href="https://google.com">Google</list-item>
                 <list-divider></list-divider>
                 <list-item as-href="https://twitter.com">Twitter</list-item>
@@ -168,11 +170,12 @@
         </div>
         <div class="col-sm-4"></div>
     </div>
+    <br/><br/><br/><br/>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="angustrap.min.js"></script>
+<script src="angustrap.js"></script>
 </body>
 </html>
