add the word navbar to the navbar title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body data-ng-app="Angustrap">
 
-<navbar as-id="navbar" title="Angustrap" theme="inverse" title-href="#">
+<navbar as-id="navbar" title="Angustrap Navbar" theme="inverse" title-href="#">
     <navbar-list side="right">
         <list-item as-href="#">Item 1</list-item>
         <list-item as-href="#">Item 2</list-item>
