--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <title>Angustrap Demo</title>
     <style media="screen">
-        .glyphicon {
-
-        }
-
         #glyph-heart {
             font-size: 2.5em;
             color: #1abc9c;
@@ -20,7 +16,7 @@
         <list-item as-href="#">Item 1</list-item>
         <list-item as-href="#">Item 2</list-item>
         <list-item as-href="#">Item 3</list-item>
-        <navbar-dropdown title="Sign-In">
+        <navbar-dropdown title="Dropdown">
             <list-item as-href="#">Dropdown item 1</list-item>
             <list-item as-href="#">Dropdown item 2</list-item>
         </navbar-dropdown>
@@ -211,6 +207,21 @@
     <progress-bar theme="primary" title="AngularJS" current="90" striped></progress-bar>
     <progress-bar theme="warning" title="Polymer" current="60"></progress-bar>
     <progress-bar theme="danger" title="C++" current="50" striped animated></progress-bar>
+
+    <br/><br/><br/>
+
+    <!-- Labels -->
+    <blockquote>
+        <h3>Labels</h3>
+    </blockquote>
+    <as-label>My Label</as-label>
+    <as-label theme="success">Success Label</as-label>
+    <as-label theme="info">Info Label</as-label>
+    <as-label theme="primary">Primary Label</as-label>
+    <as-label theme="warning">Warning Label</as-label>
+    <as-label theme="danger">Danger Label</as-label>
+
+    <br/><br/><br/><br/>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
