small wording changes

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </panel>
 
     <panel theme="success" title="Bootstrap Panel" footer="true">
-        <p>Whatever you want to put in here you can</p>
+        <p>Whatever you want to put in here you can, and the title is at the bottom</p>
     </panel>
     <br/><br/><br/>
 
