update with latest commits & changes

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <p>Whatever you want to put in here you can</p>
     </panel>
 
-    <panel theme="success" title="Bootstrap Panel" footer="true">
+    <panel theme="success" title="Bootstrap Panel" footer>
         <p>Whatever you want to put in here you can, and the title is at the bottom</p>
     </panel>
     <br/><br/><br/>
