update with latest changes

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </panel>
 
     <panel theme="success" title="Bootstrap Panel" footer>
-        <p>Whatever you want to put in here you can, and the title is at the bottom</p>
+        <p>Whatever you want to put in here you can</p>
     </panel>
     <br/><br/><br/>
 
@@ -220,6 +220,14 @@
     <as-label theme="primary">Primary Label</as-label>
     <as-label theme="warning">Warning Label</as-label>
     <as-label theme="danger">Danger Label</as-label>
+
+    <!-- Wells -->
+    <blockquote>
+        <h3>Wells</h3>
+    </blockquote>
+    <well size="lg">Large Well</well>
+    <well>Default Well</well>
+    <well size="sm">Small Well</well>
 
     <br/><br/><br/><br/>
 </div>
